# pilotr

./: .gitignore  404.html  CITATION.cff  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE-text.html  LICENSE.html  README.md  authors.html  authors.md  extra.css  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: R-CMD-check.yaml  dependency-health.yml  publish.yml  python-tests.yml  site.yml
app/: app.R  app.json  spec_builder.R  test_app_logic.R  test_app_server.R
app-lite/: app.R  build_shinylive.R  deploy_ghpages.sh
articles/: about.html  about.md  cross-language.html  cross-language.md  getting-started.html  getting-started.md  index.html  index.md  power-analysis.html  power-analysis.md  precision-rope.html  precision-rope.md  response-families.html  response-families.md  the-no-code-app.html  the-no-code-app.md  worked-examples.html  worked-examples.md
articles/articles/: about.html
demo/: app.json
docs/: advanced_designs.md  mixed_models_and_design_analysis.md
hpc/: precision_array.R  precision_array.slurm
news/: index.html  index.md
py/: 404.html  _exec.py  index.html  objects.inv  pilotr.bib  sitemap.xml
py/about/: index.html
py/api/: index.html
py/changelog/: index.html
py/cross-language/: index.html
py/examples/: index.html
py/families/: index.html
py/licence/: index.html
py/power/: index.html
py/search/: search_index.json
py/specification/: index.html
py/stylesheets/: brand.css
python/: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
python/docs/: _exec.py  about.md  api.md  cross-language.md  examples.md  families.md  index.md  licence.md  pilotr.bib  power.md  specification.md
python/docs/stylesheets/: brand.css  extra.css
python/examples/: families_demo.py  parity_check.py  power_curves.py  power_mixed_demo.py  run_demo.py
python/overrides/partials/: header.html
python/pilotr/: __init__.py  core.py  examples.py  power.py  simulate.py
python/pilotr/examples/: beta_proportion.json  crossed_mixed_rt.json
python/simdgp/: __init__.py  core.py  power.py  simulate.py
python/tests/: test_basics.py  test_examples.py  test_parallel.py
r/pilotr/: .Rbuildignore  DESCRIPTION  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  cran-comments.md
r/pilotr/.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
r/pilotr/R/: autoformula.R  brms_bridge.R  core.R  examples.R  parallel.R  pilotr-package.R  power.R  power_mixed.R  precision.R  run_app.R  simulate.R  spec_builder.R
r/pilotr/examples/: equivalence_faux.R  equivalence_simstudy.R  plot_power_curves.R  power_curve_mixed.R  precision_design_analysis.R  run_demo.R  run_power_mixed.R  validate_recovery.R
r/pilotr/inst/: CITATION
r/pilotr/man/: as241.Rd  brms_bridge.Rd  build_spec.Rd  default_response_name.Rd  generate_r_script.Rd  load_spec.Rd  make_rng.Rd  model_data.Rd  model_formula.Rd  pilotr-package.Rd  pilotr_example.Rd  power_curve_mixed.Rd  power_design.Rd  power_mixed.Rd  precision_curve.Rd  precision_design.Rd  run_app.Rd  simulate_design.Rd  spec_json.Rd
r/pilotr/pkgdown/: extra.css  (+1 more)
r/simdgp/: DESCRIPTION  NAMESPACE
reference/: as241.html  as241.md  brms_bridge.html  brms_bridge.md  build_spec.html  build_spec.md  default_response_name.html  default_response_name.md  generate_r_script.html  generate_r_script.md  index.html  index.md  load_spec.html  load_spec.md  make_rng.html  make_rng.md  model_data.html  model_data.md  model_formula.html  model_formula.md  pilotr-package.html  pilotr-package.md  pilotr.html  pilotr_example.html  pilotr_example.md  power_curve_mixed.html  power_curve_mixed.md  power_design.html  power_design.md  power_mixed.html  power_mixed.md  precision_curve.html  precision_curve.md  precision_design.html  precision_design.md  run_app.html  run_app.md  simulate_design.html  simulate_design.md  spec_json.html  (+1 more)
spec/: SPEC.md  design.schema.json
spec/examples/: between_2group_gaussian.json  nested_clusters.json  ordinal_likert_between.json
(+40 files in other folders)
