[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pilotr"
version = "0.1.0"
description = "Simulate experimental and behavioural data from a portable design specification (cross-language with the R package of the same name)."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Pablo Bernabeu", email = "pcbernabeu@gmail.com" }]
license = "MIT"
license-files = ["LICENCE"]
keywords = ["simulation", "power analysis", "mixed-effects", "experimental design", "behavioural science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []  # the generative core is pure-Python and dependency-free

[project.optional-dependencies]
power = ["scipy>=1.7"]                                  # two-group Gaussian power (p-values)
mixed = ["scipy>=1.7", "statsmodels>=0.13", "pandas>=1.3"]  # crossed mixed-effects power
dev = ["scipy>=1.7", "statsmodels>=0.13", "pandas>=1.3", "pytest>=7"]

[project.urls]
Homepage = "https://pablobernabeu.github.io/pilotr/"
Repository = "https://github.com/pablobernabeu/pilotr"
Documentation = "https://pablobernabeu.github.io/pilotr/py/"
Issues = "https://github.com/pablobernabeu/pilotr/issues"

[tool.setuptools]
packages = ["pilotr"]
